@@ -1,5 +1,6 @@
 /* Socket.java -- Client socket implementation
-   Copyright (C) 1998, 1999, 2000, 2002 Free Software Foundation, Inc.
+   Copyright (C) 1998, 1999, 2000, 2002, 2003, 2004
+   Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -37,11 +38,14 @@ exception statement from your version. */
 
 package java.net;
 
+import gnu.java.net.PlainSocketImpl;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.channels.IllegalBlockingModeException;
 import java.nio.channels.SocketChannel;
+
 
 /* Written using on-line Java Platform 1.2 API Specification.
  * Status:  I believe all methods are implemented.
@@ -64,32 +68,41 @@ import java.nio.channels.SocketChannel;
  * @author Aaron M. Renn (arenn@urbanophile.com)
  * @author Per Bothner (bothner@cygnus.com)
  */
-public class Socket {
-
-	// Class Variables
-
+public class Socket
+{
 	/**
 	 * This is the user SocketImplFactory for this class.  If this variable is
 	 * null, a default factory is used.
 	 */
 	static SocketImplFactory factory;
 
-	// Instance Variables
-
 	/**
 	 * The implementation object to which calls are redirected
 	 */
+  // package-private because ServerSocket.implAccept() needs to access it.
 	SocketImpl impl;
 
-	private boolean inputShutdown;
-	private boolean outputShutdown;
+  /**
+   * True if socket implementation was created by calling their
+   * create() method.
+   */
+  // package-private because ServerSocket.implAccept() needs to access it.
+  boolean implCreated;
 
-	SocketChannel ch;
-	// this field must have been set if created by SocketChannel
+  /**
+   * True if the socket is bound.
+   */
+  private boolean bound;
 
-	private boolean closed = false;
+  /**
+   * True if input is shutdown.
+   */
+  private boolean inputShutdown;
 
-	// Constructors
+  /**
+   * True if output is shutdown.
+   */
+  private boolean outputShutdown;
 
 	/**
 	 * Initializes a new instance of <code>Socket</code> object without 
@@ -99,14 +112,12 @@ public class Socket {
 	 * @specnote This constructor is public since JDK 1.4
 	 * @since 1.1
 	 */
-	public Socket() {
+  public Socket()
+  {
 		if (factory != null)
 			impl = factory.createSocketImpl();
 		else
 			impl = new PlainSocketImpl();
-
-		inputShutdown = false;
-		outputShutdown = false;
 	}
 
 	/**
@@ -116,9 +127,8 @@ public class Socket {
 	 * <p>
 	 * Additionally, this socket will be created using the supplied
 	 * implementation class instead the default class or one returned by a
-	 * factory.  This value can be <code>null</code>, but if it is, all instance
-	 * methods in <code>Socket</code> should be overridden because most of them
-	 * rely on this value being populated.
+   * factory.  If this value is <code>null</code>, the default Socket
+   * implementation is used.
 	 *
 	 * @param impl The <code>SocketImpl</code> to use for this
 	 *             <code>Socket</code>
@@ -127,10 +137,12 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	protected Socket(SocketImpl impl) throws SocketException {
+  protected Socket(SocketImpl impl) throws SocketException
+  {
+    if (impl == null)
+      this.impl = new PlainSocketImpl();
+    else
 		this.impl = impl;
-		this.inputShutdown = false;
-		this.outputShutdown = false;
 	}
 
 	/**
@@ -147,7 +159,8 @@ public class Socket {
 	 * checkConnect method doesn't allow the operation
 	 */
 	public Socket(String host, int port)
-		throws UnknownHostException, IOException {
+    throws UnknownHostException, IOException
+  {
 		this(InetAddress.getByName(host), port, null, 0, true);
 	}
 
@@ -162,7 +175,8 @@ public class Socket {
 	 * @exception SecurityException If a security manager exists and its
 	 * checkConnect method doesn't allow the operation
 	 */
-	public Socket(InetAddress address, int port) throws IOException {
+  public Socket(InetAddress address, int port) throws IOException
+  {
 		this(address, port, null, 0, true);
 	}
 
@@ -173,7 +187,7 @@ public class Socket {
 	 *
 	 * @param host The name of the remote host to connect to.
 	 * @param port The remote port to connect to.
-	 * @param loadAddr The local address to bind to.
+   * @param localAddr The local address to bind to.
 	 * @param localPort The local port to bind to.
 	 *
 	 * @exception SecurityException If the <code>SecurityManager</code>
@@ -184,7 +198,8 @@ public class Socket {
 	 * @since 1.1
 	 */
 	public Socket(String host, int port, InetAddress localAddr, int localPort)
-		throws IOException {
+    throws IOException
+  {
 		this(InetAddress.getByName(host), port, localAddr, localPort, true);
 	}
 
@@ -204,12 +219,9 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public Socket(
-		InetAddress address,
-		int port,
-		InetAddress localAddr,
-		int localPort)
-		throws IOException {
+  public Socket(InetAddress address, int port, InetAddress localAddr,
+                int localPort) throws IOException
+  {
 		this(address, port, localAddr, localPort, true);
 	}
 
@@ -231,7 +243,9 @@ public class Socket {
 	 * @deprecated Use the <code>DatagramSocket</code> class to create
 	 * datagram oriented sockets.
 	 */
-	public Socket(String host, int port, boolean stream) throws IOException {
+  public Socket(String host, int port, boolean stream)
+    throws IOException
+  {
 		this(InetAddress.getByName(host), port, null, 0, stream);
 	}
 
@@ -254,7 +268,8 @@ public class Socket {
 	 * datagram oriented sockets.
 	 */
 	public Socket(InetAddress host, int port, boolean stream)
-		throws IOException {
+    throws IOException
+  {
 		this(host, port, null, 0, stream);
 	}
 
@@ -275,34 +290,44 @@ public class Socket {
 	 * @exception SecurityException If a security manager exists and its
 	 * checkConnect method doesn't allow the operation
 	 */
-	private Socket(
-		InetAddress raddr,
-		int rport,
-		InetAddress laddr,
-		int lport,
-		boolean stream)
-		throws IOException {
+  private Socket(InetAddress raddr, int rport, InetAddress laddr, int lport,
+                 boolean stream) throws IOException
+  {
 		this();
-		this.inputShutdown = false;
-		this.outputShutdown = false;
-
-		if (impl == null)
-			throw new IOException("Cannot initialize Socket implementation");
 
 		SecurityManager sm = System.getSecurityManager();
 		if (sm != null)
 			sm.checkConnect(raddr.getHostName(), rport);
 
-		impl.create(stream);
+    // bind socket
+    SocketAddress bindaddr =
+      laddr == null ? null : new InetSocketAddress(laddr, lport);
+    bind(bindaddr);
+
+    // connect socket
+    connect(new InetSocketAddress(raddr, rport));
 
 		// FIXME: JCL p. 1586 says if localPort is unspecified, bind to any port,
 		// i.e. '0' and if localAddr is unspecified, use getLocalAddress() as
 		// that default.  JDK 1.2 doc infers not to do a bind.
-		if (laddr != null)
-			impl.bind(laddr, lport);
+  }
 
-		if (raddr != null)
-			impl.connect(raddr, rport);
+  private SocketImpl getImpl() throws SocketException
+  {
+    try
+      {
+	if (! implCreated)
+	  {
+	    impl.create(true);
+	    implCreated = true;
+	  }
+      }
+    catch (IOException e)
+      {
+	throw new SocketException(e.getMessage());
+      }
+
+    return impl;
 	}
 
 	/**
@@ -317,15 +342,42 @@ public class Socket {
 	 * 
 	 * @since 1.4
 	 */
-	public void bind(SocketAddress bindpoint) throws IOException {
-		if (closed)
-			throw new SocketException("Socket is closed");
+  public void bind(SocketAddress bindpoint) throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		if (!(bindpoint instanceof InetSocketAddress))
+    // XXX: JDK 1.4.1 API documentation says that if bindpoint is null the
+    // socket will be bound to an ephemeral port and a valid local address.
+    if (bindpoint == null)
+      bindpoint = new InetSocketAddress(InetAddress.ANY_IF, 0);
+
+    if (! (bindpoint instanceof InetSocketAddress))
 			throw new IllegalArgumentException();
 
-		InetSocketAddress tmp = (InetSocketAddress)bindpoint;
-		impl.bind(tmp.getAddress(), tmp.getPort());
+    InetSocketAddress tmp = (InetSocketAddress) bindpoint;
+
+    // bind to address/port
+    try
+      {
+	getImpl().bind(tmp.getAddress(), tmp.getPort());
+	bound = true;
+      }
+    catch (IOException exception)
+      {
+	close();
+	throw exception;
+      }
+    catch (RuntimeException exception)
+      {
+	close();
+	throw exception;
+      }
+    catch (Error error)
+      {
+	close();
+	throw error;
+      }
 	}
 
 	/**
@@ -340,17 +392,9 @@ public class Socket {
 	 * 
 	 * @since 1.4
 	 */
-	public void connect(SocketAddress endpoint) throws IOException {
-		if (closed)
-			throw new SocketException("Socket is closed");
-
-		if (!(endpoint instanceof InetSocketAddress))
-			throw new IllegalArgumentException("Address type not supported");
-
-		if (ch != null && !ch.isBlocking())
-			throw new IllegalBlockingModeException();
-
-		impl.connect(endpoint, 0);
+  public void connect(SocketAddress endpoint) throws IOException
+  {
+    connect(endpoint, 0);
 	}
 
 	/**
@@ -359,6 +403,8 @@ public class Socket {
 	 * until established or an error occurs.
 	 *
 	 * @param endpoint The address to connect to
+   * @param timeout The length of the timeout in milliseconds, or
+   * 0 to indicate no timeout.
 	 *
 	 * @exception IOException If an error occurs
 	 * @exception IllegalArgumentException If the address type is not supported
@@ -369,17 +415,44 @@ public class Socket {
 	 * @since 1.4
 	 */
 	public void connect(SocketAddress endpoint, int timeout)
-		throws IOException {
-		if (closed)
-			throw new SocketException("Socket is closed");
+    throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		if (!(endpoint instanceof InetSocketAddress))
-			throw new IllegalArgumentException("Address type not supported");
+    if (! (endpoint instanceof InetSocketAddress))
+      throw new IllegalArgumentException("unsupported address type");
 
-		if (ch != null && !ch.isBlocking())
+    // The Sun spec says that if we have an associated channel and
+    // it is in non-blocking mode, we throw an IllegalBlockingModeException.
+    // However, in our implementation if the channel itself initiated this
+    // operation, then we must honor it regardless of its blocking mode.
+    if (getChannel() != null && ! getChannel().isBlocking()
+        && ! ((PlainSocketImpl) getImpl()).isInChannelOperation())
 			throw new IllegalBlockingModeException();
 
-		impl.connect(endpoint, timeout);
+    if (! isBound())
+      bind(null);
+
+    try
+      {
+	getImpl().connect(endpoint, timeout);
+      }
+    catch (IOException exception)
+      {
+	close();
+	throw exception;
+      }
+    catch (RuntimeException exception)
+      {
+	close();
+	throw exception;
+      }
+    catch (Error error)
+      {
+	close();
+	throw error;
+      }
 	}
 
 	/**
@@ -388,29 +461,45 @@ public class Socket {
 	 *
 	 * @return The remote address this socket is connected to
 	 */
-	public InetAddress getInetAddress() {
-		if (impl != null)
-			return impl.getInetAddress();
+  public InetAddress getInetAddress()
+  {
+    if (! isConnected())
+      return null;
+
+    try
+      {
+	return getImpl().getInetAddress();
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are connected.
+      }
 
 		return null;
 	}
 
 	/**
 	 * Returns the local address to which this socket is bound.  If this socket
-	 * is not connected, then <code>null</code> is returned.
+   * is not connected, then a wildcard address, for which
+   * @see isAnyLocalAddress() is <code>true</code>, is returned.
 	 *
 	 * @return The local address
 	 *
 	 * @since 1.1
 	 */
-	public InetAddress getLocalAddress() {
-		if (impl == null)
-			return null;
+  public InetAddress getLocalAddress()
+  {
+    if (! isBound())
+      return InetAddress.ANY_IF;
 
 		InetAddress addr = null;
-		try {
-			addr = (InetAddress)impl.getOption(SocketOptions.SO_BINDADDR);
-		} catch (SocketException e) {
+
+    try
+      {
+	addr = (InetAddress) getImpl().getOption(SocketOptions.SO_BINDADDR);
+      }
+    catch (SocketException e)
+      {
 			// (hopefully) shouldn't happen
 			// throw new java.lang.InternalError
 			//      ("Error in PlainSocketImpl.getOption");
@@ -431,15 +520,25 @@ public class Socket {
 
 	/**
 	 * Returns the port number of the remote end of the socket connection.  If
-	 * this socket is not connected, then -1 is returned.
+   * this socket is not connected, then 0 is returned.
 	 *
 	 * @return The remote port this socket is connected to
 	 */
-	public int getPort() {
-		if (impl != null)
-			return impl.getPort();
+  public int getPort()
+  {
+    if (! isConnected())
+      return 0;
 
-		return -1;
+    try
+      {
+	return getImpl().getPort();
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are connected.
+      }
+
+    return 0;
 	}
 
 	/**
@@ -448,39 +547,71 @@ public class Socket {
 	 *
 	 * @return The local port
 	 */
-	public int getLocalPort() {
-		if (impl != null)
-			return impl.getLocalPort();
+  public int getLocalPort()
+  {
+    if (! isBound())
+      return -1;
+
+    try
+      {
+	if (getImpl() != null)
+	  return getImpl().getLocalPort();
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are bound.
+      }
 
 		return -1;
 	}
 
 	/**
-	 * If the socket is already bound this returns the local SocketAddress,
-	 * otherwise null
+   * Returns local socket address.
+   *
+   * @return the local socket address, null if not bound
 	 *
 	 * @since 1.4
 	 */
-	public SocketAddress getLocalSocketAddress() {
+  public SocketAddress getLocalSocketAddress()
+  {
+    if (! isBound())
+      return null;
+
 		InetAddress addr = getLocalAddress();
 
-		if (addr == null)
+    try
+      {
+	return new InetSocketAddress(addr, getImpl().getLocalPort());
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are bound.
 			return null;
-
-		return new InetSocketAddress(addr, impl.getLocalPort());
+      }
 	}
 
 	/**
-	 * If the socket is already connected this returns the remote SocketAddress,
-	 * otherwise null
+   * Returns the remote socket address.
+   *
+   * @return the remote socket address, null of not connected
 	 *
 	 * @since 1.4
 	 */
-	public SocketAddress getRemoteSocketAddress() {
-		if (!isConnected())
+  public SocketAddress getRemoteSocketAddress()
+  {
+    if (! isConnected())
 			return null;
 
-		return new InetSocketAddress(impl.getInetAddress(), impl.getPort());
+    try
+      {
+	return new InetSocketAddress(getImpl().getInetAddress(),
+	                             getImpl().getPort());
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are connected.
+	return null;
+      }
 	}
 
 	/**
@@ -490,11 +621,15 @@ public class Socket {
 	 *
 	 * @exception IOException If an error occurs or Socket is not connected
 	 */
-	public InputStream getInputStream() throws IOException {
-		if (impl != null)
-			return (impl.getInputStream());
+  public InputStream getInputStream() throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		throw new IOException("Not connected");
+    if (! isConnected())
+      throw new IOException("not connected");
+
+    return getImpl().getInputStream();
 	}
 
 	/**
@@ -504,11 +639,15 @@ public class Socket {
 	 *
 	 * @exception IOException If an error occurs or Socket is not connected
 	 */
-	public OutputStream getOutputStream() throws IOException {
-		if (impl != null)
-			return impl.getOutputStream();
+  public OutputStream getOutputStream() throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		throw new IOException("Not connected");
+    if (! isConnected())
+      throw new IOException("not connected");
+
+    return getImpl().getOutputStream();
 	}
 
 	/**
@@ -520,11 +659,12 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public void setTcpNoDelay(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public void setTcpNoDelay(boolean on) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.TCP_NODELAY, new Boolean(on));
+    getImpl().setOption(SocketOptions.TCP_NODELAY, Boolean.valueOf(on));
 	}
 
 	/**
@@ -539,14 +679,15 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public boolean getTcpNoDelay() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public boolean getTcpNoDelay() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object on = impl.getOption(SocketOptions.TCP_NODELAY);
+    Object on = getImpl().getOption(SocketOptions.TCP_NODELAY);
 
 		if (on instanceof Boolean)
-			return (((Boolean)on).booleanValue());
+      return (((Boolean) on).booleanValue());
 		else
 			throw new SocketException("Internal Error");
 	}
@@ -568,21 +709,23 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public void setSoLinger(boolean on, int linger) throws SocketException {
-		if (impl == null)
-			throw new SocketException("No socket created");
+  public void setSoLinger(boolean on, int linger) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		if (on == true) {
+    if (on)
+      {
 			if (linger < 0)
 				throw new IllegalArgumentException("SO_LINGER must be >= 0");
 
 			if (linger > 65535)
 				linger = 65535;
 
-			impl.setOption(SocketOptions.SO_LINGER, new Integer(linger));
-		} else {
-			impl.setOption(SocketOptions.SO_LINGER, new Boolean(false));
+	getImpl().setOption(SocketOptions.SO_LINGER, new Integer(linger));
 		}
+    else
+      getImpl().setOption(SocketOptions.SO_LINGER, Boolean.valueOf(false));
 	}
 
 	/**
@@ -601,13 +744,15 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public int getSoLinger() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public int getSoLinger() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object linger = impl.getOption(SocketOptions.SO_LINGER);
+    Object linger = getImpl().getOption(SocketOptions.SO_LINGER);
+
 		if (linger instanceof Integer)
-			return (((Integer)linger).intValue());
+      return (((Integer) linger).intValue());
 		else
 			return -1;
 	}
@@ -622,8 +767,12 @@ public class Socket {
 	 *
 	 * @since 1.4
 	 */
-	public void sendUrgentData(int data) throws IOException {
-		impl.sendUrgentData(data);
+  public void sendUrgentData(int data) throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
+
+    getImpl().sendUrgentData(data);
 	}
 
 	/**
@@ -635,28 +784,32 @@ public class Socket {
 	 * 
 	 * @since 1.4
 	 */
-	public void setOOBInline(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public void setOOBInline(boolean on) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_OOBINLINE, new Boolean(on));
+    getImpl().setOption(SocketOptions.SO_OOBINLINE, Boolean.valueOf(on));
 	}
 
 	/**
 	 * Returns the current setting of the SO_OOBINLINE option for this socket
 	 * 
+   * @return True if SO_OOBINLINE is set, false otherwise.
+   *
 	 * @exception SocketException If an error occurs
 	 * 
 	 * @since 1.4
 	 */
-	public boolean getOOBInline() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public boolean getOOBInline() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object buf = impl.getOption(SocketOptions.SO_OOBINLINE);
+    Object buf = getImpl().getOption(SocketOptions.SO_OOBINLINE);
 
 		if (buf instanceof Boolean)
-			return (((Boolean)buf).booleanValue());
+      return (((Boolean) buf).booleanValue());
 		else
 			throw new SocketException("Internal Error: Unexpected type");
 	}
@@ -669,23 +822,24 @@ public class Socket {
 	 * this option implies that there is no timeout (ie, operations will 
 	 * block forever).  On systems that have separate read and write timeout
 	 * values, this method returns the read timeout.  This
-	 * value is in thousandths of a second.
+   * value is in milliseconds.
 	 *
-	 * @param timeout The length of the timeout in thousandths of a second, or 
+   * @param timeout The length of the timeout in milliseconds, or
 	 * 0 to indicate no timeout.
 	 *
 	 * @exception SocketException If an error occurs or Socket not connected
 	 *
 	 * @since 1.1
 	 */
-	public synchronized void setSoTimeout(int timeout) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public synchronized void setSoTimeout(int timeout) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
 		if (timeout < 0)
 			throw new IllegalArgumentException("SO_TIMEOUT value must be >= 0");
 
-		impl.setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
+    getImpl().setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
 	}
 
 	/**
@@ -705,13 +859,14 @@ public class Socket {
 	 *
 	 * @since 1.1
 	 */
-	public synchronized int getSoTimeout() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public synchronized int getSoTimeout() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object timeout = impl.getOption(SocketOptions.SO_TIMEOUT);
+    Object timeout = getImpl().getOption(SocketOptions.SO_TIMEOUT);
 		if (timeout instanceof Integer)
-			return (((Integer)timeout).intValue());
+      return (((Integer) timeout).intValue());
 		else
 			return 0;
 	}
@@ -728,14 +883,15 @@ public class Socket {
 	 *
 	 * @since 1.2
 	 */
-	public void setSendBufferSize(int size) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public void setSendBufferSize(int size) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
 		if (size <= 0)
 			throw new IllegalArgumentException("SO_SNDBUF value must be > 0");
 
-		impl.setOption(SocketOptions.SO_SNDBUF, new Integer(size));
+    getImpl().setOption(SocketOptions.SO_SNDBUF, new Integer(size));
 	}
 
 	/**
@@ -749,14 +905,15 @@ public class Socket {
 	 *
 	 * @since 1.2
 	 */
-	public int getSendBufferSize() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public int getSendBufferSize() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object buf = impl.getOption(SocketOptions.SO_SNDBUF);
+    Object buf = getImpl().getOption(SocketOptions.SO_SNDBUF);
 
 		if (buf instanceof Integer)
-			return (((Integer)buf).intValue());
+      return (((Integer) buf).intValue());
 		else
 			throw new SocketException("Internal Error: Unexpected type");
 	}
@@ -773,14 +930,15 @@ public class Socket {
 	 *
 	 * @since 1.2
 	 */
-	public void setReceiveBufferSize(int size) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public void setReceiveBufferSize(int size) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
 		if (size <= 0)
 			throw new IllegalArgumentException("SO_RCVBUF value must be > 0");
 
-		impl.setOption(SocketOptions.SO_RCVBUF, new Integer(size));
+    getImpl().setOption(SocketOptions.SO_RCVBUF, new Integer(size));
 	}
 
 	/**
@@ -794,14 +952,15 @@ public class Socket {
 	 *
 	 * @since 1.2
 	 */
-	public int getReceiveBufferSize() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public int getReceiveBufferSize() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object buf = impl.getOption(SocketOptions.SO_RCVBUF);
+    Object buf = getImpl().getOption(SocketOptions.SO_RCVBUF);
 
 		if (buf instanceof Integer)
-			return (((Integer)buf).intValue());
+      return (((Integer) buf).intValue());
 		else
 			throw new SocketException("Internal Error: Unexpected type");
 	}
@@ -816,11 +975,12 @@ public class Socket {
 	 *
 	 * @since 1.3
 	 */
-	public void setKeepAlive(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public void setKeepAlive(boolean on) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_KEEPALIVE, new Boolean(on));
+    getImpl().setOption(SocketOptions.SO_KEEPALIVE, Boolean.valueOf(on));
 	}
 
 	/**
@@ -833,14 +993,15 @@ public class Socket {
 	 *
 	 * @since 1.3
 	 */
-	public boolean getKeepAlive() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Not connected");
+  public boolean getKeepAlive() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object buf = impl.getOption(SocketOptions.SO_KEEPALIVE);
+    Object buf = getImpl().getOption(SocketOptions.SO_KEEPALIVE);
 
 		if (buf instanceof Boolean)
-			return (((Boolean)buf).booleanValue());
+      return (((Boolean) buf).booleanValue());
 		else
 			throw new SocketException("Internal Error: Unexpected type");
 	}
@@ -850,14 +1011,17 @@ public class Socket {
 	 *
 	 * @exception IOException If an error occurs
 	 */
-	public synchronized void close() throws IOException {
-		if (impl != null)
-			impl.close();
+  public synchronized void close() throws IOException
+  {
+    if (isClosed())
+      return;
 
-		if (ch != null)
-			ch.close();
+    getImpl().close();
+    impl = null;
+    bound = false;
 
-		closed = true;
+    if (getChannel() != null)
+      getChannel().close();
 	}
 
 	/**
@@ -865,11 +1029,22 @@ public class Socket {
 	 *
 	 * @return The <code>String</code> representation of this <code>Socket</code>
 	 */
-	public String toString() {
-		return ("Socket " + impl);
+  public String toString()
+  {
+    try
+      {
+	if (isConnected())
+	  return ("Socket[addr=" + getImpl().getInetAddress() + ",port="
+	         + getImpl().getPort() + ",localport="
+	         + getImpl().getLocalPort() + "]");
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are connected.
 	}
 
-	// Class Methods
+    return "Socket[unconnected]";
+  }
 
 	/**
 	 * Sets the <code>SocketImplFactory</code>.  This may be done only once per 
@@ -879,13 +1054,16 @@ public class Socket {
 	 * insufficient privileges exist to set the factory, then an 
 	 * <code>IOException</code> will be thrown.
 	 *
+   * @param fac the factory to set
+   *
 	 * @exception SecurityException If the <code>SecurityManager</code> does
 	 * not allow this operation.
 	 * @exception SocketException If the SocketImplFactory is already defined
 	 * @exception IOException If any other error occurs
 	 */
 	public static synchronized void setSocketImplFactory(SocketImplFactory fac)
-		throws IOException {
+    throws IOException
+  {
 		// See if already set
 		if (factory != null)
 			throw new SocketException("SocketImplFactory already defined");
@@ -908,10 +1086,12 @@ public class Socket {
 	 *
 	 * @since 1.3
 	 */
-	public void shutdownInput() throws IOException {
-		if (impl != null)
-			impl.shutdownInput();
+  public void shutdownInput() throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
+    getImpl().shutdownInput();
 		inputShutdown = true;
 	}
 
@@ -922,74 +1102,89 @@ public class Socket {
 	 *
 	 * @since 1.3
 	 */
-	public void shutdownOutput() throws IOException {
-		if (impl != null)
-			impl.shutdownOutput();
+  public void shutdownOutput() throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
+    getImpl().shutdownOutput();
 		outputShutdown = true;
 	}
 
 	/**
 	 * Returns the socket channel associated with this socket.
 	 *
-	 * It returns null if no associated socket exists.
+   * @return the associated socket channel,
+   * null if no associated channel exists
 	 *
 	 * @since 1.4
 	 */
-	public SocketChannel getChannel() {
-		return ch;
+  public SocketChannel getChannel()
+  {
+    return null;
 	}
 
 	/**
 	 * Checks if the SO_REUSEADDR option is enabled
 	 *
+   * @return True if SO_REUSEADDR is set, false otherwise.
+   *
 	 * @exception SocketException If an error occurs
 	 *
 	 * @since 1.4
 	 */
-	public boolean getReuseAddress() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public boolean getReuseAddress() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object reuseaddr = impl.getOption(SocketOptions.SO_REUSEADDR);
+    Object reuseaddr = getImpl().getOption(SocketOptions.SO_REUSEADDR);
 
-		if (!(reuseaddr instanceof Boolean))
+    if (! (reuseaddr instanceof Boolean))
 			throw new SocketException("Internal Error");
 
-		return ((Boolean)reuseaddr).booleanValue();
+    return ((Boolean) reuseaddr).booleanValue();
 	}
 
 	/**
 	 * Enables/Disables the SO_REUSEADDR option
 	 *
+   * @param reuseAddress true if SO_REUSEADDR should be enabled,
+   * false otherwise
+   *
 	 * @exception SocketException If an error occurs
 	 *
 	 * @since 1.4
 	 */
-	public void setReuseAddress(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public void setReuseAddress(boolean reuseAddress) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_REUSEADDR, new Boolean(on));
+    getImpl().setOption(SocketOptions.SO_REUSEADDR,
+                        Boolean.valueOf(reuseAddress));
 	}
 
 	/**
 	 * Returns the current traffic class
 	 *
+   * @return The current traffic class.
+   *
 	 * @exception SocketException If an error occurs
 	 *
-	 * @see Socket:setTrafficClass
+   * @see Socket#setTrafficClass(int tc)
 	 *
 	 * @since 1.4
 	 */
-	public int getTrafficClass() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public int getTrafficClass() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.IP_TOS);
+    Object obj = getImpl().getOption(SocketOptions.IP_TOS);
 
 		if (obj instanceof Integer)
-			return ((Integer)obj).intValue();
+      return ((Integer) obj).intValue();
 		else
 			throw new SocketException("Unexpected type");
 	}
@@ -1002,62 +1197,88 @@ public class Socket {
 	 * @exception SocketException If an error occurs
 	 * @exception IllegalArgumentException If tc value is illegal
 	 *
-	 * @see Socket:getTrafficClass
+   * @see Socket#getTrafficClass()
 	 *
 	 * @since 1.4
 	 */
-	public void setTrafficClass(int tc) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public void setTrafficClass(int tc) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
 		if (tc < 0 || tc > 255)
 			throw new IllegalArgumentException();
 
-		impl.setOption(SocketOptions.IP_TOS, new Integer(tc));
+    getImpl().setOption(SocketOptions.IP_TOS, new Integer(tc));
 	}
 
 	/**
 	 * Checks if the socket is connected
 	 *
+   * @return True if socket is connected, false otherwise.
+   *
 	 * @since 1.4
 	 */
-	public boolean isConnected() {
-		return impl.getInetAddress() != null;
+  public boolean isConnected()
+  {
+    try
+      {
+	if (getImpl() == null)
+	  return false;
+
+	return getImpl().getInetAddress() != null;
+      }
+    catch (SocketException e)
+      {
+	return false;
+      }
 	}
 
 	/**
 	 * Checks if the socket is already bound.
 	 *
+   * @return True if socket is bound, false otherwise.
+   *
 	 * @since 1.4
 	 */
-	public boolean isBound() {
-		return getLocalAddress() != null;
+  public boolean isBound()
+  {
+    return bound;
 	}
 
 	/**
 	 * Checks if the socket is closed.
 	 * 
+   * @return True if socket is closed, false otherwise.
+   *
 	 * @since 1.4
 	 */
-	public boolean isClosed() {
-		return closed;
+  public boolean isClosed()
+  {
+    return impl == null;
 	}
 
 	/**
 	 * Checks if the socket's input stream is shutdown
 	 *
+   * @return True if input is shut down.
+   *
 	 * @since 1.4
 	 */
-	public boolean isInputShutdown() {
+  public boolean isInputShutdown()
+  {
 		return inputShutdown;
 	}
 
 	/**
 	 * Checks if the socket's output stream is shutdown
 	 *
+   * @return True if output is shut down.
+   *
 	 * @since 1.4
 	 */
-	public boolean isOutputShutdown() {
+  public boolean isOutputShutdown()
+  {
 		return outputShutdown;
 	}
 }
